# StatMon

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
scripts/: install_qt6.sh
src/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt  cmake_install.cmake
src/gui/include/gui/: data_types.hpp  data_widget.hpp  main_window.hpp  pane_manager.hpp  pane_types.hpp  pane_widget.hpp  settings_dialog.hpp
src/gui/src/: data_widget.cpp  main_window.cpp  pane_manager.cpp  pane_widget.cpp  settings_dialog.cpp
